--- a/FlaskApp/.env
+++ b/FlaskApp/.env
@@ -3,3 +3,5 @@ DB_PORT=3307
 DB_USER='root'
 DB_PASS='angelawhdudtj12!'
 DB_NAME='db_eatit'
+
+SQLALCHEMY_DATABASE_URI=mysql://root:angelawhdudtj12!@localhost:3307/db_eatit
