--- a/FlaskApp/.env
+++ b/FlaskApp/.env
@@ -1,7 +1,7 @@
-DB_HOST='127.0.0.1'
-DB_PORT=3307
-DB_USER='root'
-DB_PASS='angelawhdudtj12!'
-DB_NAME='db_eatit'
+DB_HOST=eatit.cdcqgl7rjtje.ap-northeast-2.rds.amazonaws.com
+DB_PORT=3306
+DB_USER=eatit
+DB_PASS=EatitDB717!
+DB_NAME=db_eatit
 
-SQLALCHEMY_DATABASE_URI=mysql://root:angelawhdudtj12!@localhost:3307/db_eatit
+SQLALCHEMY_DATABASE_URI=mysql://eatit:EatitDB717!@eatit.cdcqgl7rjtje.ap-northeast-2.rds.amazonaws.com:3306/db_eatit?charset=utf8mb4
