--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aniso8601==9.0.1
+attrs==23.1.0
 blinker==1.6.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
@@ -7,20 +9,29 @@ Flask==2.3.2
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.2
 Flask-MySQLdb==1.0.1
+flask-restx==1.1.0
 Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 idna==3.4
+importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
 MarkupSafe==2.1.3
 mysql==0.0.3
 mysql-connector-python==8.1.0
 mysqlclient==2.2.0
 protobuf==4.21.12
 PyJWT==2.8.0
+PyMySQL==1.1.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
+referencing==0.30.2
 requests==2.31.0
+rpds-py==0.10.2
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 urllib3==2.0.4
 Werkzeug==2.3.6
+zipp==3.16.2
